--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Decorator for functions with optional arguments",
   "main": "easy-params.js",
   "scripts": {
-    "test": "sh run_tests.sh"
+    "test": "bash run_tests.sh"
   },
   "repository": {
     "type": "git",
